--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "prettier": "^3.1.0",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@4.0.2"
 }
