--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "format": "prettier --write .",
     "ts:check": "tsc"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "prettier": "^3.1.1",
     "typescript": "^5.1.3"
   },
   "overrides": {
